<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginStart="24dp"
        android:layout_marginTop="100dp"
        android:layout_marginEnd="24dp"
        android:layout_marginBottom="100dp"
        android:orientation="vertical"
        tools:context=".Instruction">


        <TextView
            style="@style/texts"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/instruction_title" />

        <TextView
            style="@style/description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/instruction_description" />

        <Button
            android:id="@+id/instructions_button"
            style="@style/onboarding_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/instruction_button" />
    </LinearLayout>
</layout>